// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/omit-text/demo/basic.md extend context correctly 1`] = `
Array [
  <div
    class="ant-omit-text"
    style="max-width:120px"
  >
    这是一段很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长的文本
  </div>,
  <div>
    <div
      class="ant-tooltip"
      style="opacity:0"
    >
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-arrow"
        >
          <span
            class="ant-tooltip-arrow-content"
          />
        </div>
        <div
          class="ant-tooltip-inner"
          role="tooltip"
        >
          这是一段很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长的文本
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/omit-text/demo/type.md extend context correctly 1`] = `
Array [
  <div
    class="ant-omit-text"
    style="max-width:120px"
  >
    这是一段很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长的文本
  </div>,
  <div>
    <div
      class="ant-popover ant-popconfirm"
      style="opacity:0"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-popover-message"
            >
              <span
                aria-label="exclamation-circle"
                class="anticon anticon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
              <div
                class="ant-popover-message-title"
              >
                这是一段很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长的文本
              </div>
            </div>
            <div
              class="ant-popover-buttons"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary ant-btn-sm"
                type="button"
              >
                <span>
                  OK
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/omit-text/demo/width.md extend context correctly 1`] = `
Array [
  <div
    class="ant-omit-text"
    style="max-width:200px"
  >
    这是一段很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长的文本
  </div>,
  <div>
    <div
      class="ant-tooltip"
      style="opacity:0"
    >
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-arrow"
        >
          <span
            class="ant-tooltip-arrow-content"
          />
        </div>
        <div
          class="ant-tooltip-inner"
          role="tooltip"
        >
          这是一段很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长的文本
        </div>
      </div>
    </div>
  </div>,
]
`;
